<!--
  ~ Copyright 2024 BlackOrbs (blackorbs@icloud.com)
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License
  -->

<resources>
    <string name="app_name">BlackPay</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_beneficiary">Beneficiary</string>
    <string name="title_history">Transactions</string>
    <string name="title_account">Accounts</string>
    <string name="label_balance">Balance</string>
    <string name="label_status">Status</string>
    <string name="label_type">Type</string>
    <string name="label_account_no">Account Number</string>
    <string name="select_source_account">Select source account</string>
    <string name="select_destination_account">Select destination account</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="button_proceed">Proceed</string>
    <string name="label_from">From:</string>
    <string name="title_confirm">Confirm Transaction</string>
    <string name="button_pay">Pay</string>
    <string name="label_to">To:</string>
    <string name="title_transfer">Funds Transfer</string>
    <string name="button_login">Login</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="title_welcome">Sign in to continue</string>
    <string name="title_success">Success</string>
    <string name="transfer_success">Your transfer was completed successfully!</string>
    <string name="button_okay">Okay</string>
    <string name="status_active">Active</string>
    <string name="status_closed">Closed</string>
    <string name="type_savings">Premier Savings</string>
    <string name="type_current">Current Account</string>
    <string name="same_account_error">Source and destination accounts can not be the same, please try again</string>
    <string name="zero_input_error">Amount must be greater than 0</string>
    <string name="insufficient_bal_error">Amount can not be greater than source account balance</string>
    <string name="transaction_details">TRF %1$d From %2$s To %3$s</string>
    <string name="select_account_details">%1$s (%2$s)</string>
    <string name="text_input_error">Check your input and try again</string>
    <string name="login_failed">Login failed! Check your internet connection and try again</string>
</resources>