<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2024 BlackOrbs (blackorbs@icloud.com)
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    app:startDestination="@id/nav_accounts">

    <fragment
        android:id="@+id/nav_accounts"
        android:name="blackorbs.dev.payapp.ui.main.accounts.AccountsPage"
        android:label="@string/title_account"
        tools:layout="@layout/accounts_page" />

    <fragment
        android:id="@+id/nav_history"
        android:name="blackorbs.dev.payapp.ui.main.history.HistoryPage"
        android:label="@string/title_history"
        tools:layout="@layout/history_page" />

    <fragment
        android:id="@+id/nav_transfer"
        android:name="blackorbs.dev.payapp.ui.main.transfer.TransferPage"
        android:label="@string/title_transfer"
        tools:layout="@layout/transfer_page" />

</navigation>