<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2024 BlackOrbs (blackorbs@icloud.com)
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License
  -->

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_success"
        android:paddingTop="@dimen/standard_10"
        android:paddingBottom="@dimen/standard_10"
        android:paddingStart="@dimen/standard_20"
        android:paddingEnd="@dimen/standard_20"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="?colorSecondaryVariant"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfer_success"
        android:textSize="16sp"
        android:textColor="?colorOnSecondary"
        android:layout_marginTop="@dimen/standard_20"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:drawablePadding="@dimen/standard_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/standard_100"
        android:layout_height="@dimen/standard_100"
        android:layout_marginTop="@dimen/standard_20"
        android:src="@drawable/done2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/okay_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_50"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/button_okay"
        android:textSize="16sp"
        android:textColor="?colorSecondaryVariant"
        android:layout_margin="@dimen/standard_20"
        app:strokeWidth="3dp"
        app:strokeColor="?colorSecondaryVariant"
        app:layout_constraintTop_toBottomOf="@+id/source_account"/>

</androidx.appcompat.widget.LinearLayoutCompat>