<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2024 BlackOrbs (blackorbs@icloud.com)
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_confirm"
        android:paddingTop="@dimen/standard_10"
        android:paddingBottom="@dimen/standard_10"
        android:paddingStart="@dimen/standard_20"
        android:paddingEnd="@dimen/standard_20"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/purple_700"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/standard_0"
        android:layout_marginEnd="@dimen/standard_5"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10,000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/standard_20"
        android:layout_gravity="center_horizontal"
        android:drawablePadding="@dimen/standard_5"
        android:drawableStart="@drawable/naira_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/source_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/label_from"
        android:layout_marginTop="@dimen/standard_10"
        android:layout_marginStart="@dimen/standard_20"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        app:layout_constraintStart_toStartOf="parent"/>
    <View
        android:id="@+id/source_label_under"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@+id/source_label"
        app:layout_constraintEnd_toEndOf="@+id/source_label"
        app:layout_constraintStart_toStartOf="@+id/source_label"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/source_number"
        style="@style/NormalText"
        tools:text="0703346489"
        app:layout_constraintTop_toBottomOf="@+id/source_label_under"
        app:layout_constraintStart_toStartOf="@id/source_label"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/source_name"
        style="@style/NormalText"
        android:textStyle="bold"
        tools:text="Mustapha Soliu"
        app:layout_constraintTop_toBottomOf="@+id/source_number"
        app:layout_constraintStart_toStartOf="@id/source_label"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dest_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/label_to"
        android:layout_marginEnd="@dimen/standard_20"
        app:layout_constraintTop_toTopOf="@+id/source_label"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/dest_label_under"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@+id/dest_label"
        app:layout_constraintEnd_toEndOf="@+id/dest_label"
        app:layout_constraintStart_toStartOf="@+id/dest_label"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dest_number"
        style="@style/NormalText"
        android:gravity="end"
        tools:text="02455552162"
        app:layout_constraintTop_toBottomOf="@+id/dest_label_under"
        app:layout_constraintEnd_toEndOf="@+id/dest_label"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dest_name"
        style="@style/NormalText"
        android:gravity="end"
        android:textStyle="bold"
        tools:text="Jamiu Abiodun Akinyemi"
        app:layout_constraintTop_toBottomOf="@+id/dest_number"
        app:layout_constraintEnd_toEndOf="@+id/dest_label"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_50"
        android:text="@string/button_pay"
        android:textSize="16sp"
        android:layout_margin="@dimen/standard_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/source_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>